syntax = "proto3";

option java_multiple_files = true;
option java_package = 'com.grpc.services.users'; 

service UserService {
    rpc GetUser(UserRequest) returns (UserResponse);
}

message UserRequest {
    string message = 1;
}

message UserResponse {
    string message = 1;
}